--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -3,13 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Home Page</title>
+    <title><Footer></Footer></title>
   </head>
   <body>
-    <%- include("partials/header") %>
-
-    <h1>Welcome to the Book Store!</h1>
-
-    <%- include("partials/footer") %>
+    <footer>
+      <p>&copy; 2025 Book Store. All rights reserved.</p>
+    </footer>
   </body>
 </html>
