--- a/views/reset.ejs
+++ b/views/reset.ejs
@@ -1,48 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Password Changed</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Reset Password</h1>
 
     <!-- This below will help display Error Message Below -->
 
     <% if (error) { %>
-        <p style="color: red;"><%= error %></p>
-      <% } %>
+    <p style="color: red"><%= error %></p>
+    <% } %>
 
-      <!-- This below displays the success message -->
-    
+    <!-- This below displays the success message -->
+
     <% if (success) { %>
-        <p><%= success %></p>
-        <% } %>
+    <p><%= success %></p>
+    <% } %>
 
-        <!-- This is form for the passowrd Change and the success Message -->
+    <!-- This is form for the passowrd Change and the success Message -->
 
-        <form action="/reset" method="post">
-            <!-- Add the user input below -->
-             <p>Username</p>
-             <input type="text" name="username" placeholder="Username" required />
-             <br>
+    <form action="/reset" method="post">
 
-             <p>Password</p>
-             <input type="password"name="password"placeholder="Password" required />
+      <!-- Add the user input below -->
 
-             <br>
-             
-             <p>New Password</p>
-             <input type="password"name="new_password"placeholder="New_Password" required />
+      <p>Username</p>
+      <input type="text" name="username" placeholder="Username" required />
+      <br />
 
-             <br>
+      <p>Password</p>
+      <input type="password" name="password" placeholder="Password" required />
 
-             <!-- Submit the button -->
+      <br />
 
-             <button type="submit">Reset Password</button> <a href="/login">login</a>
+      <p>New Password</p>
+      <input  type="password" name="new_password"placeholder="New_Password"required />
 
-        </form>
-    
-</body>
+      <!-- <label for="email">Email:</label>
+    <input type="email" id="email" name="email" required>
+
+    <br>
+
+    <label for="new_password">New Password:</label>
+    <input type="password" id="new_password" name="new_password" required> -->
+
+
+      <br />
+
+      <!-- Submit the button -->
+
+      <button type="submit">Reset Password</button> 
+      <br>
+
+      <a href="/login">login</a>
+    </form>
+
+    <%- include("partials/footer") %>
+  </body>
 </html>
