--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,30 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>SignUp</title>
-</head>
-<body>
-    <h1>Sign Up</h1>
+  </head>
+  <body>
+    <h1>SignUp Page</h1>
 
     <form action="/signup" method="post">
+      <!-- User Input -->
+      <!-- <p>UserName</p>
 
-        <!-- User Input -->
-         <p>UserName</p>
+      <input type="text" name="username" placeholder="username" required />
+      <br /><br />
 
-        <input type="text" name="username" placeholder="username" required/>
-        <br><br>
+      <p>Password</p>
 
-        <p>Password</p>
-        
-        <input type="password" name="password" placeholder="password" required/>
+      <input type="password" name="password" placeholder="password" required /> -->
 
-        <br><br>
+      <label for="username">Username:</label>
+      <input type="text" id="username" name="username" required />
 
-        <!-- submit button -->
-        
-        <button type="submit">Signup</button> <a href="/login"></a>
-      </form>
-</body>
+      <br />
+
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required />
+
+      <br />
+
+      <label for="password">Password:</label>
+      <input type="password" id="password" name="password" required />
+
+      <br /><br />
+
+      <!-- submit button -->
+
+      <button type="submit">Signup</button> <a href="/login"></a>
+    </form>
+
+    <%- include("partials/footer") %>
+  </body>
 </html>
